# synkronized

./: .gitignore  Cargo.toml  Dockerfile  README.md  synkronized.yaml
.github/workflows/: docker-image.yml  release.yml  tag.yml
src/: argo.rs  github.rs  helm.rs  main.rs  utils.rs
