[package]
name = "synkronized"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
http = "1.1.0"
dotenv = "0.15.0"
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.90"
futures = "0.3.31"
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
schemars = "0.8.21"
derivative = "2.2.0"
reqwest = "0.12.8"
