[package]
name = "synkronized"
version = "0.1.3"
edition = "2021"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
http = "1.1.0"
dotenv = "0.15.0"
serde_yaml = "0.9.34"
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.90"
futures = "0.3.31"
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
schemars = "0.8.21"
derivative = "2.2.0"
reqwest = "0.12.8"
chrono = {version = "0.4.39", features = ["serde"] }
poem-openapi = { version = "5.1.5", features = ["swagger-ui"] }
poem = "3.1.5"
tracing-subscriber = "0.3.19"
axum = "0.8.1"
serde_derive = "1.0.217"
octocrab = "0.42.1"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
hex = "0.4.3"
async-trait = "0.1.85"
hmac-sha256 = "1.1.8"
serde_path_to_error = "0.1.16"
subtle = "2.6.1"
